qiskit-vscode-log.out
verbose - Object: Activating qiskit-vscode extension...
verbose - Object: ✨ Activating qiskit-vscode extension... ✨
info - Object: QConfig is not configured. The command won't be launched
info - Object: QConfig is not configured. The command won't be launched
verbose - Object: Clicked on other element! Redirecting to configuration anyway
verbose - Object: Checking for Python dependencies...
verbose - Object: Package: python Version: 3.7.0
verbose - Object: Package: pip Version: 10.0.1
verbose - Object: Check for required python packages...
debug - PackageManager: Checking package qiskit 0.5.4 installation
debug - PackageManager: Checking package qiskit-aqua 0.3.0 installation
debug - PackageManager: Checking package qiskit-aqua-chemistry 0.3.0 installation
verbose - unknown: Qiskit VSCode Extension dependencies found! 👌 python v 3.7.0
👌 pip v 10.0.1

verbose - Object: qiskit-vscode extension successfully loaded!
verbose - Object: 🚀 qiskit-vscode extension loaded! 🚀
verbose - PackageManager: Starting installation process for qiskit ...
verbose - PackageManager: Starting installation process for qiskit-aqua ...
verbose - PackageManager: Starting installation process for qiskit-aqua-chemistry ...
verbose - Object: Deactivating Qiskit extension ...
verbose - Object: Activating qiskit-vscode extension...
verbose - Object: ✨ Activating qiskit-vscode extension... ✨
verbose - Object: Checking for Python dependencies...
verbose - Object: Package: python Version: 3.7.0
verbose - Object: Package: pip Version: 10.0.1
verbose - Object: Check for required python packages...
debug - PackageManager: Checking package qiskit 0.5.4 installation
debug - PackageManager: Checking package qiskit-aqua 0.3.0 installation
debug - PackageManager: Checking package qiskit-aqua-chemistry 0.3.0 installation
verbose - unknown: Qiskit VSCode Extension dependencies found! 👌 python v 3.7.0
👌 pip v 10.0.1

verbose - Object: qiskit-vscode extension successfully loaded!
verbose - Object: 🚀 qiskit-vscode extension loaded! 🚀
verbose - PackageManager: Starting installation process for qiskit ...
verbose - PackageManager: Starting installation process for qiskit-aqua-chemistry ...
verbose - PackageManager: Starting installation process for qiskit-aqua ...
verbose - PackageManager: Clicked on another element! Cancelling install
info - PackageManager: Package [object Object] do not updated. The user rejected the update
info - Object: Go to install qiskit-aqua
verbose - PackageManager: Clicked on another element! Cancelling install
info - PackageManager: Package [object Object] do not updated. The user rejected the update
info - Object: Go to install qiskit-aqua-chemistry
verbose - PackageManager: Clicked on another element! Cancelling install
info - PackageManager: Package [object Object] do not updated. The user rejected the update
info - Object: Go to install qiskit
info - Object: QConfig is not configured. The command won't be launched
error - Object:   File "/home/hieu/workplace/Haskell/ex5.py", line 35
    def test5
            ^
SyntaxError: invalid syntax

verbose - Object: Clicked on OK!
info - Object: QConfig is not configured. The command won't be launched
error - Object:   File "/home/hieu/workplace/Haskell/ex5.py", line 37
    
        ^
SyntaxError: unexpected EOF while parsing

verbose - Object: Clicked on Dismiss!
error - Object: QConfig setup rejected by the user
